<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_jobs">

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.sdm.jornalero.ui.fragments.JobsFragment"
        android:label="@string/nav_title_jobs"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sdm.jornalero.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sdm.jornalero.ui.fragments.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
