<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Contaner"
    tools:context=".ui.activities.EditJob">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.ToolBar"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginVertical="30dp"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/AppTheme.CardView"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:paddingVertical="15dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_job_name"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:hint="@string/job_name"
                    style="@style/AppTheme.Text"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_job_description"
                    android:layout_below="@id/txt_job_name"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:hint="@string/job_description"
                    style="@style/AppTheme.TextArea"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lbl_job_type"
                    style="@style/AppTheme.Label"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="20dp"
                    android:layout_width="wrap_content"
                    android:text="@string/job_type"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_job_description"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_job_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="22dp"
                    android:layout_toEndOf="@id/lbl_job_type"
                    android:layout_below="@id/txt_job_description"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_full_part"
                android:visibility="visible"
                android:paddingVertical="2dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lbl_job_hours"
                    style="@style/AppTheme.Label"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:text="@string/hours"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_job_hours"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:hint="8"
                    style="@style/AppTheme.Text"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/lbl_job_hours" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lbl_job_salary"
                    style="@style/AppTheme.Label"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="wrap_content"
                    android:text="@string/monthly_salary"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_job_hours"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_job_salary"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:hint="$"
                    android:inputType="numberDecimal"
                    style="@style/AppTheme.Text"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/lbl_job_salary"
                    android:layout_below="@id/txt_job_hours" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_job_address"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:hint="@string/job_address"
                    android:inputType="numberDecimal"
                    style="@style/AppTheme.Text"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_job_salary" />
            </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginHorizontal="10dp"
                    style="@style/AppTheme.Button"
            android:text="@string/save" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</RelativeLayout>